Filter content to display

--- a/src/AppBundle/Resources/public/css/overlay.sass
+++ b/src/AppBundle/Resources/public/css/overlay.sass
@@ -113,7 +113,7 @@ section.overlay
 			font-size: 12px
 			color: #aaa
 
-	// REPORT
+	// REPORT, NEW REQUEST
 
 	.box-container
 		background: white
@@ -125,6 +125,7 @@ section.overlay
 		border-radius: 3px
 		border: 1px solid #ccc
 		overflow: hidden
+		box-shadow: 0 0 50px rgba(0,0,0,.1)
 
 		&.report
 			width: 445px
