--- a/src/PP/HeaderBundle/Resources/public/css/style.sass
+++ b/src/PP/HeaderBundle/Resources/public/css/style.sass
@@ -170,10 +170,7 @@ header
 								border-radius: 3px
 
 								&:hover
-									background: #777
-
-									.filter-choose-list
-										color: white
+									background: rgba(0,0,0,.1)
 
 								&:active
 									background: #444
@@ -199,7 +196,7 @@ header
 									content: $icon-filters
 									position: absolute
 									top: 0
-									right: 5px
+									right: 6px
 									z-index: 1
 									font-size: 14px
 									color: #ccc
@@ -347,8 +344,8 @@ header
 
 							.number
 								display: block
-								font-size: 25px
-								padding: 6px 16px
+								font-size: 20px
+								padding: 4px 0
 								text-align: center
 								color: white
 
