--- a/src/PP/MessageBundle/Resources/public/css/style.sass
+++ b/src/PP/MessageBundle/Resources/public/css/style.sass
@@ -27,6 +27,7 @@ section.overlay-messages
 		border-radius: 3px
 		border: 1px solid rgba(0,0,0,.1)
 		overflow: hidden
+		box-shadow: 0 0 50px rgba(0,0,0,.1)
 
 		.container
 			position: relative
