--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionPattern.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionPattern.html.twig
@@ -6,7 +6,7 @@
                 alt="{{ proposition.image.alt }}"
                 />                
             </div>
-            <a ng-click="propositions.showPopup({{ proposition.id }})" class="overlay" href="" title=""></a>
+            <a ng-click="propositions.showPopup({{ proposition.id }})" class="overlay" ng-href="{{ asset(proposition.image.webPath("original")) }}" title=""></a>
             {% if canSelectProposition == true %}
                     {{ form(selectPropositionForms[proposition.id]) }}
                 <a class="selecting-prop" id="propositionSelect_{{ proposition.id }}" ng-click="propositions.postRequestSelect({{ proposition.id }})" href="" title="Select this picture">Select this picture</a>                
