Button Report Profile

--- a/src/AppBundle/Resources/public/css/style.sass
+++ b/src/AppBundle/Resources/public/css/style.sass
@@ -8,7 +8,9 @@
 @import button
 @import checkbox
 @import select
+@import dropdown
 @import upvote
+@import tag
 @import avatar
 @import jumbotron
 @import overlay
