--- a/src/AppBundle/Resources/public/css/global.sass
+++ b/src/AppBundle/Resources/public/css/global.sass
@@ -44,6 +44,11 @@ h1, h2, h3, h4, h5, h6
 	font-weight: 400
 	margin: 0
 
+ul, ol, li
+	padding: 0
+	margin: 0
+	list-style: none
+
 img
 	border: none
 
