Create side info request

--- a/app/Resources/views/overlay.html.twig
+++ b/app/Resources/views/overlay.html.twig
@@ -1,5 +1,5 @@
 <section class="overlay send-request" id="sendRequestOver" style="display: none;">    
-    <div class="box-container new-request">
+    <div class="box-container new-request stopPropagation">
         <div class="box-content">
             <div class="box-top">
                 Send new request
