--- a/src/PP/HeaderBundle/Resources/views/header/header.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/header.html.twig
@@ -11,7 +11,7 @@
             <ul>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 {# new request button #}
-                <li ><a class="button red" href="" title="Send your request" ng-click="header.showNewRequestForm()">Send your request</a></li>                                                
+                <li ><a class="button red stopPropagation" href="" title="Send your request" ng-click="header.showNewRequestForm()">Send your request</a></li>                                                
                 
                 {# notification #}
                 <li class="stopPropagation" >
