Reset password system

--- a/src/PP/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/PP/UserBundle/Resources/views/Security/login.html.twig
@@ -24,6 +24,6 @@
     <!--<label for="remember_me">Remenber me</label> -->
     
     <button type="submit" class="button red signin" id="_submit" name="_submit">Sign in</button>
-    <a class="forgot" href="#">Forgot your password?</a>
+    <a class="forgot" href="{{ path('pp_user_resetting_request') }}">Forgot your password?</a>
 </form>
 
