--- a/src/PP/UserBundle/Resources/views/layout.html.twig
+++ b/src/PP/UserBundle/Resources/views/layout.html.twig
@@ -9,8 +9,8 @@
 
 {% block body %}
 
- 
-  {% block fos_user_content %}
-  {% endblock fos_user_content %}
-
+ <div class="main-left">
+    {% block fos_user_content %}
+    {% endblock fos_user_content %}
+ </div>
 {% endblock %}
